[tool.poetry]
name = "pomodoro-analytics"
version = "0.1.0"
description = ""
authors = ["Kirilliza <mivisotskie3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
